# drool

./: .gitignore  LICENSE  README  README.md  drool.cabal  drool.lkshs  drool.lkshw  droolui-test.glade  optrun  run
sample_settings/: default.drool
src/: GLViewport.hs  Main.hs  ViewOptions.hs
src/Drool/: ApplicationContext.hs  ApplicationContext.hs-boot  ContextObjects.hs  Main.hs  Types.hs  VisualConfig.hs  VisualSettings.hs
src/Drool/UI/: .VisualOptions.hs.swo  FFTSurface.hs  FeatureExtractionOptions.hs  GLUTWindow.hs  GLViewport.hs  GLWindow.hs  GtkHelpers.hs  Menubar.hs  Metrics.hs  SamplingOptions.hs  SignalBufferOptions.hs  SignalSource.hs  SignalSourceOptions.hs  TransformationOptions.hs  ViewOptions.hs  Visual.hs  VisualOptions.hs  Visuals.hs
src/Drool/UI/Dialogs/: FFTSurfaceDialog.hs
src/Drool/UI/Visuals/: Blank.hs  Disco.hs  FFTSurface.hs  Spheres.hs  Tunnel.hs  Visual.hs
src/Drool/Utils/: Conversions.hs  FFT.hs  FeatureExtraction.hs  MFifoQ.hs  Objects.hs  RenderHelpers.hs  SigGen.hs  Transformation.hs
