name: drool
version: 0.1.0
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
author: Tobias Fuchs
maintainer: twh.fuchs@gmail.com
data-dir: ""
 
executable drool
    ghc-options: -threaded
    build-depends: GLUT -any, OpenGL -any, array -any, carray -any,
                   base -any, glade -any, gtk -any,
                   gtk2hs-cast-glade -any, gtkglext -any, mtl -any, 
                   pulse-simple -any, fft -any, pure-fft -any
    main-is: Drool/Main.hs
    buildable: True
    hs-source-dirs: src
    other-modules: Drool.UI.SamplingOptions Drool.Utils.Conversions
                   Drool.ApplicationContext Drool.UI.SignalSource Drool.Types
                   Drool.Utils.SigGen Drool.Utils.MFifoQ Drool.UI.GLWindow
                   Drool.UI.GLUTWindow
 
