name: drool
version: 0.1.0
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
author: Tobias Fuchs
maintainer: twh.fuchs@gmail.com
data-dir: ""
 
executable drool
    ghc-options: -O2 -rtsopts -threaded -ferror-spans -feager-blackholing
                 -- -feager-blackholing
    build-depends: GLUT -any, OpenGL -any, array -any, carray -any,
                   base -any, glade -any, gtk -any,
                   gtk2hs-cast-glade -any, gtkglext -any, mtl -any, 
                   pulse-simple -any, fft -any, pure-fft -any, hmatrix -any, 
                   FTGL -any, criterion -any
    main-is: Drool/Main.hs
    buildable: True
    hs-source-dirs: src
    other-modules: Drool.UI.SignalBufferOptions Drool.Utils.Conversions
                   Drool.ApplicationContext Drool.UI.SignalSourceOptions Drool.Types
                   Drool.UI.TransformationOptions Drool.UI.FeatureExtractionOptions
                   Drool.Utils.SigGen Drool.UI.GLWindow Drool.Utils.RenderHelpers
                   Drool.Utils.Transformation
 
